# fraud_detection_e2e_demo

./: .gitignore  README.md  build_images.sh  calculate_features.py  clean_runs.sh  docker-bake.hcl  requirements.in  requirements.txt  setup.sh  synthetic_data_generation.py  test_workflow.py  train.py
data_preparation/: Containerfile  main.py  pyproject.toml  requirements-linux.txt
dspa/: dspa_simple.yaml  kustomization.yaml  minio-secret.yaml
feature_engineering/: .dockerignore  Containerfile  Containerfile.registry  README.md  feast_apply.py  feast_feature_engineering.py  feature-store.yaml  feature_engineering.py  pyproject.toml  requirements-linux.txt  requirements.in  requirements.txt  synthetic_data_generation.py  test_workflow.py
feature_repo/: example_repo.py  synthetic_data_generation.py  test_workflow.py
manifests/: kserve-minio-secret.yaml  kserve-sa.yaml  kustomization.yaml  role-binding.yaml  role.yaml  serving-runtime.yaml
pipeline/: Containerfile  fraud-detection-e2e.py  fraud-detection-e2e.yaml  job-id.py  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.in  requirements.txt
rest_predictor/: Containerfile  README.md  predictor.py  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.in  requirements.txt
retrieve_features/: Containerfile  requirements.in  requirements.txt
synthetic_data_generation/: README.md  pyproject.toml  (+1 more)
train/: .dockerignore  Containerfile  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.in  requirements.txt  test_model.py  train.py
(+56 files in other folders)
