[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kfp==2.11.0",
    "kfp[kubernetes]",
    "kserve==0.15.0",
    "model-registry==0.2.16",
    "minio",
    "feast[spark]",
    "pandas",
    "kubernetes",
]
